--- a/src/app/componentes/calendario/calendario.component.html
+++ b/src/app/componentes/calendario/calendario.component.html
@@ -32,7 +32,7 @@
         }
         @if (eventoSeleccionado.precio) {
           <p class="text-sm text-gray-500">
-            <strong>Precio:</strong> {{ eventoSeleccionado.precio | currency }}
+            <strong>Precio:</strong> {{ eventoSeleccionado.precio | currency }} €
           </p>
         }
       </div>
