--- a/src/app/componentes/navegacion/navegacion.component.html
+++ b/src/app/componentes/navegacion/navegacion.component.html
@@ -57,6 +57,13 @@
               class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">
              Negocios
            </a>
+           <a routerLink="/graficos" 
+              routerLinkActive="bg-teal-400 text-white"
+              class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">
+             Graficos
+           </a>
+
+           
               <a href="/admin" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Panel</a>
             </div>
             </div>
