--- a/src/app/componentes/admin/blog-admin/blog-admin.component.html
+++ b/src/app/componentes/admin/blog-admin/blog-admin.component.html
@@ -11,7 +11,7 @@
 </div>
 }
     @if (mostrarFormularioBlog) {
-    <form [formGroup]="blogForm" (ngSubmit)="agregarBlog()" class="space-y-6">
+    <form [formGroup]="blogForm" (ngSubmit)="agregarBlog()" class="mx-auto p-6 max-w-3xl border border-teal-600 rounded-md">
       
       <!-- Título -->
       <div>
@@ -20,18 +20,17 @@
           id="titulo"
           type="text"
           formControlName="titulo"
-          class="w-full bg-gray-800 border border-gray-700 rounded-md p-2 text-white focus:outline-none focus:ring-2 focus:ring-teal-500"
+          class="w-full border border-teal-600 rounded-md p-2 text-black focus:outline-none focus:ring-2 focus:ring-teal-500"
           required
         />
       </div>
   
       <!-- Contenido -->
       <div>
-        <label class="block text-sm font-medium mb-1" for="contenido">Contenido</label>
          <editor apiKey="qobixfl8d269htsdhbgkwr5cglvx91ltdouomicefl5sxc3x"
           id="contenido"
           formControlName="contenido"
-          class="w-full bg-gray-800 border border-gray-700 rounded-md p-2 text-white focus:outline-none focus:ring-2 focus:ring-teal-500"
+          class="w-full rounded-md p-2 text-black focus:outline-none focus:ring-2 focus:ring-teal-500 my-3"
         >
         </editor>
        
@@ -44,18 +43,18 @@
           id="categoria"
           type="text"
           formControlName="categoria"
-          class="w-full bg-gray-800 border border-gray-700 rounded-md p-2 text-white focus:outline-none focus:ring-2 focus:ring-teal-500"
+          class="w-full border border-teal-600 rounded-md p-2 text-black focus:outline-none focus:ring-2 focus:ring-teal-500"
           required
         />
       </div>
   
       <!-- Estado -->
       <div>
-        <label class="block text-sm font-medium mb-1" for="status">Estado</label>
+        <label class="block text-sm font-medium" for="status">Estado</label>
         <select
           id="status"
           formControlName="status"
-          class="w-full bg-gray-800 border border-gray-700 rounded-md p-2 text-white focus:outline-none focus:ring-2 focus:ring-teal-500"
+          class="w-full border border-teal-600 rounded-md p-2 text-black focus:outline-none focus:ring-2 focus:ring-teal-500"
           required
         >
           <option [value]="true">Activo</option>
@@ -66,7 +65,7 @@
       <!-- Acciones -->
       <button
     type="submit"
-    class="bg-teal-400 text-white px-4 py-2 rounded-md hover:bg-teal-600 focus:ring-2 focus:ring-teal-500 w-full">
+    class="bg-teal-400 text-white px-4 py-2 mt-5 rounded-md hover:bg-teal-600 focus:ring-2 focus:ring-teal-500 w-full">
     Guardar
   </button>
     </form>
