--- a/src/app/componentes/admin/negocios-admin/negocios-admin.component.html
+++ b/src/app/componentes/admin/negocios-admin/negocios-admin.component.html
@@ -14,7 +14,7 @@
   <form
     [formGroup]="negocioForm"
     (ngSubmit)="agregarNegocio()"
-    class="space-y-4 bg-white text-black p-4 rounded-lg shadow-lg max-w-2xl mx-auto"
+    class="space-y-4 text-black p-4 rounded-lg shadow-lg max-w-2xl mx-auto"
   >
     <!-- Nombre -->
     <div>
@@ -89,7 +89,7 @@
         <select
           id="redSocial"
           formControlName="tipoRedSocial"
-          class="bg-gray-800 border border-gray-700 rounded-md p-2 text-white focus:outline-none focus:ring-2 focus:ring-blue-500"
+          class="border border-teal-600 rounded-md p-2 text-black focus:outline-none focus:ring-2 focus:ring-teal-600"
         >
           <option value="" disabled selected>Selecciona una red social</option>
           <option value="instagram">Instagram</option>
@@ -104,7 +104,7 @@
           id="urlRedSocial"
           formControlName="urlRedSocial"
           type="text"
-          class="w-full bg-gray-800 border border-gray-700 rounded-md p-2 text-white focus:outline-none focus:ring-2 focus:ring-blue-500"
+          class="w-full border border-teal-600 rounded-md p-2 text-black focus:outline-none focus:ring-2 focus:ring-teal-600"
           placeholder="URL de la red social"
         />
       </div>
