--- a/src/app/componentes/admin/eventos-admin/eventos-admin.component.html
+++ b/src/app/componentes/admin/eventos-admin/eventos-admin.component.html
@@ -4,14 +4,14 @@
     <div class="flex justify-center mt-6">
   <button
     (click)="agregarEvento()"
-    class="btn-agregar px-6 py-3 bg-teal-400 text-white text-lg font-semibold rounded-full shadow-md hover:bg-teal-500 focus:ring-2 focus:ring-teal-500"
+    class="btn-agregar btn-25 px-6 py-3 bg-teal-400 text-white text-lg font-semibold rounded-full shadow-md hover:bg-teal-500 focus:ring-2 focus:ring-teal-500"
   >
     Agregar nuevo evento
   </button>
 </div>
 }
   @if (mostrarFormularioEvento) {
-  <form  [formGroup]="eventoForm" class="space-y-6 mt-8 border border-teal-600 bg-gray-100 p-6 rounded-lg transition-colors duration-300" (ngSubmit)="agregarEvento()">
+  <form  [formGroup]="eventoForm" class="space-y-6 mt-8 bg-yellow-100 border-2 border-yellow-300 shadow-lg p-6 rounded-lg transition-colors duration-300" (ngSubmit)="agregarEvento()">
     <!-- titulo -->
     <div>
       <label class="block text-sm font-medium mb-1" for="titulo">Titulo</label>
@@ -19,7 +19,7 @@
         type="text"
         id="titulo"
         formControlName="titulo"
-        class="w-full bg-gray-800 border border-teal-600 rounded-md p-2 text-black focus:outline-none focus:ring-2 focus:ring-teal-600"
+        class="w-full border border-yellow-300 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-yellow-300"
         required      
         />
     </div>
@@ -32,7 +32,7 @@
           type="date"
           id="fecha"
           formControlName="fecha"
-          class="w-full border border-teal-600 rounded-md p-2 text-black focus:outline-none focus:ring-2 focus:ring-teal-600"
+          class="w-full border border-yellow-300 rounded-md p-2 text-black focus:outline-none focus:ring-2 focus:ring-yellow-300"
           required
           />
       </div>
@@ -42,7 +42,7 @@
           type="date"
           id="fecha_fin"
           formControlName="fecha_fin"
-          class="w-full border border-teal-600 rounded-md p-2 mt-6 text-black focus:outline-none focus:ring-2 focus:ring-teal-600"
+          class="w-full border  border-yellow-300 rounded-md p-2 mt-6 text-black focus:outline-none focus:ring-2 focus:ring-yellow-300"
           />
       </div>
     </div>
@@ -55,7 +55,7 @@
           type="time"
           id="hora_inicio"
           formControlName="hora_inicio"
-          class="w-full border border-teal-600 rounded-md p-2 text-black focus:outline-none focus:ring-2 focus:ring-teal-600"
+          class="w-full border  border-yellow-300 rounded-md p-2 text-black focus:outline-none focus:ring-2 focus:ring-yellow-300"
           required
           />
       </div>
@@ -65,7 +65,7 @@
           type="time"
           id="hora_fin"
           formControlName="hora_fin"
-          class="w-full border border-teal-600 rounded-md p-2 text-black focus:outline-none focus:ring-2 focus:ring-teal-600"
+          class="w-full border border-yellow-300 rounded-md p-2 text-black focus:outline-none focus:ring-2 focus:ring-yellow-300"
           />
       </div>
     </div>
@@ -93,7 +93,7 @@
       <textarea
         id="descripcion"
         formControlName="descripcion"
-        class="w-full border border-teal-600 rounded-md p-2 text-black focus:outline-none focus:ring-2 focus:ring-teal-600"
+        class="w-full border border-yellow-300 rounded-md p-2 text-black focus:outline-none focus:ring-2 focus:ring-yellow-300"
         rows="4"
         required
         ></textarea>
@@ -105,7 +105,7 @@
         id="entrada"
         formControlName="entrada"
         required
-        class="w-full border border-teal-600 rounded-md p-2 text-black focus:outline-none focus:ring-2 focus:ring-teal-600"
+        class="w-full border border-yellow-300 rounded-md p-2 text-black focus:outline-none focus:ring-2 focus:ring-yellow-300"
       >
         <option value="Gratuito">Gratuito</option>
         <option value="Pago">Pago</option>
@@ -120,7 +120,7 @@
         type="number"
         id="precio"
         formControlName="precio"
-        class="w-fullborder border-teal-600 rounded-md p-2 text-black focus:outline-none focus:ring-2 focus:ring-teal-600"
+        class="w-full border border-yellow-300 rounded-md p-2 text-black focus:outline-none focus:ring-2 focus:ring-yellow-300"
       />
     </div>
   }
@@ -133,7 +133,7 @@
         id="ubicacion"
         formControlName="ubicacion"
         required
-        class="w-full border border-teal-600 rounded-md p-2 text-black focus:outline-none focus:ring-2 focus:ring-teal-600"
+        class="w-full border border-yellow-300 rounded-md p-2 text-black focus:outline-none focus:ring-2 focus:ring-yellow-300"
       />
     </div>
 
@@ -165,13 +165,13 @@
       <div class="mt-4 flex gap-4">
         <button
           (click)="editarEvento(evento)"
-          class="btn-eventos bg-teal-400 text-white hover:text-black px-4 py-2 rounded-md hover:bg-teal-600"
+          class="btn-eventos btn-9 bg-teal-400 text-white hover:text-black px-4 py-2 rounded-md hover:bg-teal-600"
         >
           Editar
         </button>
         <button
           (click)="eliminarEvento(evento)"
-          class="btn-eventos bg-black text-white hover:text-black px-4 py-2 rounded-md"
+          class="btn-eventos btn-9 bg-black text-white hover:text-black px-4 py-2 rounded-md"
         >
           Eliminar
         </button>
