--- a/src/app/componentes/admin/graficos-admin/graficos-admin.component.html
+++ b/src/app/componentes/admin/graficos-admin/graficos-admin.component.html
@@ -1,14 +1,20 @@
-<div style="display: block;">
-        <h3>Gráfico 1: Emigrantes en España</h3>
-        <canvas baseChart [datasets]="barChartData1" [labels]="barChartLabels1" [options]="barChartOptions" [legend]="barChartLegend"></canvas>
-      </div>
-      
-      <div style="display: block;">
-        <h3>Gráfico 2: Emigrantes por Provincia</h3>
-        <canvas baseChart [datasets]="barChartData2" [labels]="barChartLabels2" [options]="barChartOptions" [legend]="barChartLegend"></canvas>
-      </div>
-      
-      <div style="display: block;">
-        <h3>Gráfico 3: Emigrantes por País</h3>
-        <canvas baseChart [datasets]="barChartData3" [labels]="barChartLabels3" [options]="barChartOptions" [legend]="barChartLegend"></canvas>
-      </div>
+<div class="charts-container">   
+  <div>
+    <canvas id="graficoBarras"></canvas>
+  </div>
+  <div>
+    <canvas id="graficoLineas"></canvas>
+  </div>
+  <div class="contenedor-grafico">
+    <div id="contenedorGraficoTorta">
+      <canvas id="graficoTorta"></canvas>
+    </div>
+    <div class="botones-anios">
+      @for (anio of aniosDisponibles; track anio) {
+        <button class="btn-anio bg-teal-400" (click)="cambiarAnio(anio)">
+          {{ anio }}
+        </button>
+      }
+    </div>
+  </div>
+</div>
