--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -1,7 +1,18 @@
 <section class="bg-teal-500 text-white py-16">
-    <div class="max-w-4xl mx-auto text-center">
-      <h2 class="text-4xl font-bold">¡Sé parte de nuestra comunidad!</h2>
-      <p class="mt-4 text-lg">Descubre, conecta y celebra lo mejor de Uruguay en España.</p>
-      <a href="/contacto" class="mt-6 inline-block bg-yellow-400 text-white font-semibold py-3 px-8 rounded-lg shadow-lg hover:bg-yellow-500 transition duration-300">Únete Ahora</a>
+  <div class="max-w-4xl mx-auto text-center">
+    <h2 class="text-4xl font-bold">¡Sé parte de nuestra comunidad!</h2>
+    <p class="mt-4 text-lg">Descubre, conecta y celebra lo mejor de Uruguay en España.</p>
+    
+    <a href="/registro" class="mt-6 inline-block bg-yellow-400 text-white font-semibold py-3 px-8 rounded-lg shadow-lg hover:bg-yellow-500 transition duration-300">Únete Ahora</a>
+
+    <div class="mt-8 flex justify-center space-x-6">
+      <a href="https://instagram.com/uruguayosenespanya" target="_blank" class="text-white hover:text-yellow-400 transition duration-300">
+        <i class="fab fa-instagram fa-2x"></i>
+      </a>
+      <a href="https://www.youtube.com/@uruguayosenespana8508" target="_blank" class="text-white hover:text-yellow-400 transition duration-300">
+        <i class="fab fa-youtube fa-2x"></i>
+      </a>
     </div>
-  </section>
+  </div>
+</section>
+
